[package]
name = "wl-gammarelay-rs"
version = "0.4.1"
authors = ["Max Verevkin <maxxverrr@gmail.com>"]
edition = "2021"
description = "A simple program that provides DBus interface to control display temperature and brightness under wayland without flickering"
repository = "https://github.com/MaxVerevkin/wl-gammarelay-rs"
license = "GPL-3.0-only"
keywords = ["redshift", "gammastep", "wayland", "night-mode"]

[dependencies]

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
